# minimal-cpp-cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .clangd  CMakeLists.txt
